--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>BiblioGenius - La bibliothèque de demain, chez vous.</title>
     <meta name="description"
         content="BiblioGenius est une application Open Source pour gérer votre bibliothèque personnelle et partager vos livres avec vos voisins.">
-    <!-- Eco-friendly: replaced CDN Tailwind with local CSS -->
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Merriweather:wght@400;700&display=swap"
         rel="stylesheet">
@@ -44,7 +43,7 @@
                     </svg>
                     <span id="btn-github-text">Voir le Code (GitHub)</span>
                 </a>
-                <a href="#contact" id="btn-tester" class="btn btn-secondary">
+                <a href="mailto:contact@bibliogenius.org" id="btn-tester" class="btn btn-secondary">
                     Devenir Testeur
                 </a>
             </div>
@@ -68,7 +67,7 @@
                 </div>
                 <div class="feature-card">
                     <span class="feature-icon">🧙‍♂️</span>
-                    <h3 id="feature-ai-title">Intelligence Locale (MCP)</h3>
+                    <h3 id="feature-ai-title">Assistant Bibliothécaire</h3>
                     <p id="feature-ai-desc">Connectez vos agents IA locaux (Claude, Ollama) à votre bibliothèque via le
                         protocole ouvert MCP.</p>
                 </div>
@@ -105,6 +104,9 @@
             <h2 id="footer-title">Rejoignez l'aventure</h2>
             <p id="footer-desc">Le projet est en développement actif. Écrivez-nous pour participer ou tester.</p>
             <a href="mailto:contact@bibliogenius.org">contact@bibliogenius.org</a>
+            <br><br>
+            <a href="contribute.html" style="color:var(--accent-color); text-decoration: none;">➜ Espace
+                Contributeurs</a>
 
             <div class="footer-bottom">
                 <p id="footer-copyright">© 2025 BiblioGenius. Open Source (MIT License).</p>
@@ -125,7 +127,7 @@
                 feature_local_desc: "Vos données vous appartiennent. Fonctionne hors-ligne, sans cloud.",
                 feature_p2p_title: "Partage P2P",
                 feature_p2p_desc: "Prêtez vos livres à vos amis ou voisins de confiance. Créez un réseau de lecture local et décentralisé.",
-                feature_ai_title: "Intelligence Locale (MCP)",
+                feature_ai_title: "Assistant Bibliothécaire",
                 feature_ai_desc: "Connectez vos agents IA locaux (Claude, Ollama) à votre bibliothèque via le protocole ouvert MCP.",
                 feature_modular_title: "Modulaire",
                 feature_modular_desc: "Une application qui s'adapte à votre usage : lecteur, famille, association ou enseignant.",
@@ -150,7 +152,7 @@
                 feature_local_desc: "Your data belongs to you. Works offline, no cloud required.",
                 feature_p2p_title: "P2P Sharing",
                 feature_p2p_desc: "Lend your books to trusted friends or neighbors. Create a local and decentralized reading network.",
-                feature_ai_title: "Local Intelligence (MCP)",
+                feature_ai_title: "Librarian Assistant",
                 feature_ai_desc: "Connect your local AI agents (Claude, Ollama) to your library via the open MCP protocol.",
                 feature_modular_title: "Modular",
                 feature_modular_desc: "An app that adapts to your needs: reader, family, association, or teacher.",
@@ -175,7 +177,7 @@
                 feature_local_desc: "Tus datos te pertenecen. Funciona sin conexión, sin nube.",
                 feature_p2p_title: "Intercambio P2P",
                 feature_p2p_desc: "Presta tus libros a amigos o vecinos de confianza. Crea una red de lectura local y descentralizada.",
-                feature_ai_title: "Inteligencia Local (MCP)",
+                feature_ai_title: "Asistente Bibliotecario",
                 feature_ai_desc: "Conecta tus agentes de IA locales (Claude, Ollama) a tu biblioteca vía el protocolo abierto MCP.",
                 feature_modular_title: "Modular",
                 feature_modular_desc: "Una aplicación que se adapta a tu uso: lector, familia, asociación o profesor.",
@@ -200,7 +202,7 @@
                 feature_local_desc: "Ihre Daten gehören Ihnen. Funktioniert offline, ohne Cloud.",
                 feature_p2p_title: "P2P-Teilen",
                 feature_p2p_desc: "Verleihen Sie Ihre Bücher an vertrauenswürdige Freunde oder Nachbarn. Erstellen Sie ein lokales und dezentrales Lesenetzwerk.",
-                feature_ai_title: "Lokale Intelligenz (MCP)",
+                feature_ai_title: "Bibliotheksassistent",
                 feature_ai_desc: "Verbinden Sie Ihre lokalen KI-Agenten (Claude, Ollama) über das offene MCP-Protokoll mit Ihrer Bibliothek.",
                 feature_modular_title: "Modular",
                 feature_modular_desc: "Eine App, die sich an Ihre Bedürfnisse anpasst: Leser, Familie, Verein oder Lehrer.",
