--- a/contribute.html
+++ b/contribute.html
@@ -73,6 +73,12 @@
             margin-left: 10px;
             vertical-align: middle;
         }
+
+        /* Override body for Dark Mode on this page */
+        body {
+            background-color: #0f172a;
+            color: #f3f4f6;
+        }
     </style>
 </head>
 
