Update contrib link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </svg>
                     <span id="btn-github-text">Voir le Code (GitHub)</span>
                 </a>
-                <a href="mailto:contact@bibliogenius.org" id="btn-tester" class="btn btn-secondary">
+                <a href="https://bibliogenius.org/contribute.html" id="btn-tester" class="btn btn-secondary">
                     Devenir Testeur
                 </a>
             </div>
