comment wip section

--- a/index.html
+++ b/index.html
@@ -99,26 +99,26 @@
     </section>
 
     <!-- Free Your Library Section -->
-    <section class="free-library">
-        <div class="container">
-            <h2 id="free-library-title">Libérez votre bibliothèque</h2>
-            <p id="free-library-desc">
-                Vos livres ne doivent pas être prisonniers d'une plateforme.
-                Importez facilement vos données depuis vos anciennes applications.
-            </p>
-            <div class="platform-logos">
-                <div class="platform-logo"><span>📱</span> Gleeph</div>
-                <div class="platform-logo"><span>📖</span> Babelio</div>
-                <div class="platform-logo"><span>🌎</span> Goodreads</div>
-                <div class="platform-logo"><span>📦</span> inventaire.io</div>
-            </div>
-            <a href="free-your-library.html" id="btn-free-library" class="btn btn-primary">
-                Voir les tutoriels d'import
-            </a>
-        </div>
-    </section>
+    <!-- <section class="free-library">
+         <div class="container">
+             <h2 id="free-library-title">Libérez votre bibliothèque</h2>
+             <p id="free-library-desc">
+                 Vos livres ne doivent pas être prisonniers d'une plateforme.
+                 Importez facilement vos données depuis vos anciennes applications.
+             </p>
+             <div class="platform-logos">
+                 <div class="platform-logo"><span>📱</span> Gleeph</div>
+                 <div class="platform-logo"><span>📖</span> Babelio</div>
+                 <div class="platform-logo"><span>🌎</span> Goodreads</div>
+                 <div class="platform-logo"><span>📦</span> inventaire.io</div>
+             </div>
+             <a href="free-your-library.html" id="btn-free-library" class="btn btn-primary">
+                 Voir les tutoriels d'import
+             </a>
+         </div>
+     </section>-->
 
-    <!-- Footer / Contact -->
+     <!-- Footer / Contact -->
     <footer id="contact" class="footer">
         <div class="container">
             <h2 id="footer-title">Rejoignez l'aventure</h2>
